# Target-Strike-Adaptive-LED-Reaction-Game

./: README.md  TargetStrike.c
CODE_FILES/TargetStrike/: CMakeLists.txt
CODE_FILES/TargetStrike/main/: CMakeLists.txt  TargetStrike.c
TargetStrike/: App.js  app.json  firebaseConfig.js  package-lock.json  package.json
TargetStrike - Copy/: App.js  app.json  package-lock.json  package.json
TargetStrike - Copy/android/: settings.gradle
TargetStrike - Copy/android/app/: build.gradle
backEnd/backEnd/: pom.xml
esp_idf/shooter_game/: CMakeLists.txt
esp_idf/shooter_game/main/: CMakeLists.txt
esp_idf/shooter_game/main/include/: buttons.h  buzzer.h  communication.h  display.h  game_logic.h  seven_segment.h
main_controller/: .cproject
main_controller/main/: main.c
react_native_app/: app.json  package-lock.json  package.json
react_native_app/app/: About.js  Contact.js  Developer.js  KillCountScreen.js  KillCounter.js  _layout.js  firebaseConfig.js  index.js
target_final/: .cproject  .project  CMakeLists.txt
target_final/components/espnow_comm/: CMakeLists.txt  espnow_comm.c
target_final/components/ultrasonic_sensor/: CMakeLists.txt  ultrasonic_sensor.c
target_final/main/: CMakeLists.txt  main.c
target_node/: .cproject  .project
target_node/main/: main.c
target_shoot_game/: .cproject  .project  CMakeLists.txt
target_shoot_game/components/esp_now_comm/: CMakeLists.txt  esp_now_comm.c
target_shoot_game/components/firebase/: CMakeLists.txt  firebase.c
target_shoot_game/components/oled/: oled.c  (+1 more)
target_shoot_game/main/: CMakeLists.txt  main.c
(+18 files in other folders)
